--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,49 @@
-$primary: red;
+$primary: rgb(214, 232, 217);
+$secondary: pink;
+.shadow{
+    box-shadow: 0 2px 10px black !important;
+}
+
+.post-card{
+    transition: 0.1s;
+    &:hover{
+        box-shadow: 0 5px 20px black;
+    }
+}
+
+.post-card_img{
+    img{
+        width: 100%;
+        height: 350px;
+        object-fit: cover;
+    }
+
+    
+}
+
+.post-card_i{
+    justify-content: right;
+    padding-right: 15px;
+    
+}
+
+.post-card_content{
+    padding: 15px;
+}
+
+
+.btn1{
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    background-color: $secondary;
+    font-weight: bold;
+}
+
+.btn1:hover{
+    background: rgb(248, 210, 216);
+}
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss'
 
